# WayHome

./: .gitignore  CMakeLists.txt  README.md
cache/: cities_cache.json
cache/trips/: c146-c75-2026-03-31.json  c193-c10590-2026-03-30.json  c193-c2-2026-03-30.json  c2-c11487-2026-04-05.json  c213-c11508-2026-03-29.json  c213-c193-2026-03-28.json  c26972-c28872-2026-03-30.json
tests/: CMakeLists.txt  tests.cpp
